Use SmallRye FFM to reliably get host name